@@ -1,4 +1,16 @@
 #! /bin/sh
+# $Id: regenerate_document_strings_make_rules.sh,v 1.2 2012-11-13 23:46:32 karl Exp $
+# Copyright 2011, 2012 Free Software Foundation, Inc.
+#
+# This file is free software; as a special exception the author gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
+# Originally written by Patrice Dumas.
 
 dir=`echo $0 | sed 's,/[^/]\+$,,'`
 outfile=Makefile.documents_strings_mo_files
@@ -18,19 +30,19 @@ for lingua in `cat ../po_document/LINGUAS`; do
 	cd $(srcdir)/../po_document/ && $(MAKE) $(AM_MAKEFLAGS) '"$lingua.gmo"'
 
 LocaleData/'"$lingua"'/LC_MESSAGES/$(document_domain).mo: $(srcdir)/../po_document/'"$lingua"'.gmo LocaleData/'"$lingua"'/LC_MESSAGES
-	$(INSTALL_DATA) $< $@
+	$(INSTALL_DATA) $(srcdir)/../po_document/'"$lingua"'.gmo $@
 
 LocaleData/'"$lingua"'/LC_MESSAGES: LocaleData/'"$lingua"'
-	$(MKDIR_P) $@
+	$(mkdir_p) $@
 
 LocaleData/'"$lingua"': LocaleData
-	$(MKDIR_P) $@
+	$(mkdir_p) $@
 ' >> $outfile
   dependencies="$dependencies "'LocaleData/'"$lingua"'/LC_MESSAGES/$(document_domain).mo'
 done
 
 echo 'LocaleData:
-	$(MKDIR_P) $@
+	$(mkdir_p) $@
 
 document_strings_mo_files = '"$dependencies" >> $outfile
 )
