@@ -1,5 +1,9 @@
 2012-11-13  Karl Berry  <karl@gnu.org>
 
+	* tp/maintain/regenerate_file_list.pl,
+	* maintain/regenerate_document_strings_make_rules.sh: do not
+	generate rules using $<.
+
 	* doc/Makefile.am (wwwdoc-build, wwwdoc-install): new targets
 	for updating the manuals on the web.
 	
